Write provisioned hosts to ZK early